--- a/Rasterizer_v0/Rasterizer_v0.vcxproj.filters
+++ b/Rasterizer_v0/Rasterizer_v0.vcxproj.filters
@@ -42,11 +42,11 @@
     <ClCompile Include="src\Rendering\Rasterizer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Maths\Mat4.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="includes\Maths\Matrix.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="includes\Maths\Vector3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -75,6 +75,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="includes\Rendering\Rasterizer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\Maths\Mat4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
