--- a/Rasterizer_v0/Rasterizer_v0.vcxproj.filters
+++ b/Rasterizer_v0/Rasterizer_v0.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClCompile Include="src\Maths\Mat4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\SceneObjects\Light.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Maths\Mat3.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\Maths\Vector3.h">
@@ -78,6 +84,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="includes\Maths\Mat4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\SceneObjects\Light.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\Maths\Mat3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
