--- a/Rasterizer_v0/Rasterizer_v0.vcxproj.filters
+++ b/Rasterizer_v0/Rasterizer_v0.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="src\Maths\Mat3.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\SceneObjects\Camera.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\Maths\Vector3.h">
@@ -90,6 +93,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="includes\Maths\Mat3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\SceneObjects\Camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
