Refactored Code / Clipping buggy / Per pixel blinn-phong / inputs handling

--- a/Rasterizer_v0/Rasterizer_v0.vcxproj.filters
+++ b/Rasterizer_v0/Rasterizer_v0.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\SceneObjects\Camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Rendering\Window.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\Maths\Vector3.h">
@@ -96,6 +99,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="includes\SceneObjects\Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="includes\Rendering\Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
