--- a/Rasterizer_v0/Rasterizer_v0.vcxproj
+++ b/Rasterizer_v0/Rasterizer_v0.vcxproj
@@ -205,6 +205,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Graphics\Vertex.cpp" />
     <ClCompile Include="src\Graphics\Texture.cpp" />
+    <ClCompile Include="src\Rendering\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="includes\SceneObjects\Camera.h" />
@@ -221,6 +222,7 @@
     <ClInclude Include="includes\Rendering\Rasterizer.h" />
     <ClInclude Include="includes\SceneObjects\Light.h" />
     <ClInclude Include="includes\Maths\Mat3.h" />
+    <ClInclude Include="includes\Rendering\Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
